--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -12,35 +12,20 @@ body
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
 
-
 main
   z-index: 1
   margin-top: 20px
   padding-left: 20px
   overflow: auto
 
-
-.header
-  margin: 5px
-  margin-top: 0px
-  height: 75px
-  background-color: cyan
-  border-style: solid
-  border-width: 1px
-  position: fixed
-  top: 0
-  right: 0
-  left: 0
-  z-index: 2
-
-
 li
   list-style-type: none
-
 
 nav li
   display: inline
 
+a
+  text-decoration: none
 
 @media screen and (max-width: 960px)
   body
